# sharira

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  benchmarks.md  deny.toml
.github/workflows/: ci.yml
benches/: benchmarks.rs
docs/architecture/: overview.md
docs/development/: roadmap.md
docs/guides/: testing.md
examples/: basic.rs
scripts/: bench-history.sh
src/: allometry.rs  bioenergetics.rs  biomechanics.rs  body.rs  bridge.rs  error.rs  fatigue.rs  gait.rs  ik.rs  joint.rs  kinematics.rs  lib.rs  logging.rs  morphology.rs  muscle.rs  pose.rs  preset.rs  skeleton.rs
src/integration/: soorat.rs
tests/: integration.rs
