[package]
name = "sharira"
version = "1.0.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Sharira — physiology engine for skeletal structures, musculature, locomotion, and biomechanics"
homepage = "https://github.com/MacCracken/sharira"
repository = "https://github.com/MacCracken/sharira"
readme = "README.md"
documentation = "https://docs.rs/sharira"
keywords = ["skeleton", "anatomy", "locomotion", "biomechanics", "physiology"]
categories = ["science", "simulation", "game-engines"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = []
soorat-compat = []
logging = ["dep:tracing-subscriber"]

[dependencies]
hisab = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "benchmarks"
harness = false
